ingress/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: public
    annotations:
        service.beta.kubernetes.io/do-loadbalancer-protocol: "tcp"
        service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
spec:
    type: LoadBalancer
    ports:
        - name: http
          port: 80
          targetPort: 80
